05-ingress-and-service/ingress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: k60m-demo
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: k60m-demo
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k60m-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - <your name>.k60m.howinator.io
    secretName: echo-tls
  rules:
  - host: <your name>.k60m.howinator.io
    http:
      paths:
      - backend:
          serviceName: k60m-demo
          servicePort: 80
